--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "axios": "^1.9.0",
     "bootstrap": "^5.3.6",
     "bootstrap-icons": "^1.13.1",
+    "browser-image-compression": "^2.0.2",
+    "luxon": "^3.6.1",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.0",
@@ -52,6 +54,7 @@
   },
   "devDependencies": {
     "@types/axios": "^0.9.36",
+    "@types/luxon": "^3.6.2",
     "@types/react-toastify": "^4.0.2"
   }
 }
